# go

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  go.db  go.db-shm  go.db-wal
.github/workflows/: pipeline.yaml
.sqlx/: query-f84a8cc90c70380dfd22fb7fdec7a25d29b7093e1ad4c0d33a63280b72cc6b21.json
initialisations/: 011_register_vec_embd.up.sql
migrations/: 001_create_links_table.up.sql  002_create_links_standing_data.up.sql  011_register_vec_embed.up.sql  012_create_vec_links_table.down.sql  012_create_vec_links_table.up copy.sql  012_create_vec_links_table.up.sql  013_create_vec_links_triggers.up.sql  021_register_fuzzy.up.sql  20250216171813_create_links_table.up.sql
scripts/: sqlite-lembed-install.sh
src/: main.rs  model.rs  query.rs  route.rs  schema.rs  service.rs  template.rs
src/handler/: api.rs  htmx.rs  mod.rs  search.rs
templates/: base.html  error.html  index.html  link.html  links.html
templates/links/: create.html  edit.html  list.html  search.html  view.html
templates/pages/: error.html  links.html
templates/utils/: loading.html  navbar.html  paging.html
