[package]
name = "go"
version = "0.1.6"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = [
  "macros",
  "rt-multi-thread",
] } # async runtime
# rest server
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["cors", "fs"] }
# sqlite
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "sqlite",
  "chrono",
] }
# html templating
askama = { version = "0.12" }
# standard stuff
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
static_str_ops = "0.1"
